// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createLocation only required inputs; parent == customer 1`] = `
{
  "data": {
    "createLocation": {
      "__typename": "Location",
      "name": {
        "__typename": "Name",
        "value": "test only required inputs",
      },
      "parent": null,
      "scanCode": null,
      "site": {
        "__typename": "Location",
        "name": {
          "__typename": "Name",
          "value": "test only required inputs",
        },
      },
      "tags": [],
      "timeZone": "America/Denver",
    },
  },
}
`;

exports[`createLocation with optional inputs 1`] = `
{
  "data": {
    "createLocation": {
      "__typename": "Location",
      "name": {
        "__typename": "Name",
        "value": "test optional inputs",
      },
      "parent": null,
      "scanCode": "asdf",
      "site": {
        "__typename": "Location",
        "name": {
          "__typename": "Name",
          "value": "test optional inputs",
        },
      },
      "tags": [],
      "timeZone": "America/Denver",
    },
  },
}
`;

exports[`createLocation parent == location 1`] = `
{
  "data": {
    "createLocation": {
      "__typename": "Location",
      "name": {
        "__typename": "Name",
        "value": "test child location",
      },
      "parent": {
        "__typename": "Location",
        "name": {
          "__typename": "Name",
          "value": "Frozen Tendy Factory",
        },
      },
      "scanCode": null,
      "site": {
        "__typename": "Location",
        "name": {
          "__typename": "Name",
          "value": "Frozen Tendy Factory",
        },
      },
      "tags": [],
      "timeZone": "America/Denver",
    },
  },
}
`;
